--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springJDBCDemo
 server.port=8081
-# spring.application.name=spring_demo
-# spring.datasource.url=jdbc:postgresql://localhost:5432/sample
-# spring.datasource.username=postgres
-# spring.datasource.password=mysecretpassword
-# spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
